recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:9: error: not found: value lenght
    avance(lenght);
           ^Spiral:11: error: not found: value spirale
    spirale(steps-1, angle, lenght+increment, increment);
    ^Spiral:11: error: not found: value lenght
    spirale(steps-1, angle, lenght+increment, increment);
                            ^